--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -449,7 +449,7 @@ a {
   }
 
   .project-details {
-    max-width: 1080px;
+    max-width: 1000px;
   }
 
   .btn {
@@ -466,6 +466,7 @@ a {
     padding: 24px 48px;
     font-size: 36px;
     font-weight: 400;
+    border: 4px solid var(--btn-outline);
   }
 
   .btn-outline:hover {
@@ -476,7 +477,6 @@ a {
     fill: var(--btn-outline);
     width: 36px;
     height: 36px;
-    transition: all 0.2s ease-in;
   }
 
   .logo {
@@ -517,12 +517,14 @@ a {
   }
 
   .title-1 {
-    margin-bottom: 30px;
+    margin-bottom: 0;
+    padding-bottom: 30px;
     font-size: 72px;
   }
 
   .title-2 {
-    margin-bottom: 10px;
+    margin-bottom: 0;
+    padding-bottom: 10px;
     font-size: 54px;
   }
 
